[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxml3"
version = "0.0.5"
requires-python = ">=3.8"
dependencies = []
authors = [
    {name = "Andrew C Scott", email = "imgurbot12@gmail.com"},
]
description = "Pure python3 alternative to stdlib xml.etree with HTML support"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = 'LICENSE' }
keywords = ["xml", "html", "parser", "encoder", "pure", "python3"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/imgurbot12/pyxml"
